--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
             Depois de tomar o controle da cidade, um clube de motoqueiros
             enfrenta problemas com rivais, grupos racistas e a lei.
           </p>
+          <div class="botoes">
+            <button role="button" class="botao">
+              <i class="fas fa-play"></i> ASSISTIR AGORA
+            </button>
+            <button role="button" class="botao">
+              <i class="fas fa-info-circle"></i> MAIS INFORMAÇÕES
+            </button>
+          </div>
         </div>
-        <button role="button" class="botao">ASSISTIR AGORA</button>
-        <button role="button" class="botao">MAIS INFORMAÇÕES</button>
       </div>
     </main>
+    <script
+      src="https://kit.fontawesome.com/bb058525f3.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
