--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
+    <!-- Arquivos Owl CSS-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="style/owl/owl.theme.green.min.css" />
+
     <title>NETFLIX CLONE</title>
   </head>
   <body>
@@ -38,9 +42,47 @@
         </div>
       </div>
     </main>
+    <div class="carrossel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box-filme" src="img/mini1.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini2.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini3.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini4.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini5.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini6.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini7.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini8.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini9.jpg" alt="" srcset="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini10.jpg" alt="" srcset="" />
+        </div>
+      </div>
+    </div>
     <script
       src="https://kit.fontawesome.com/bb058525f3.js"
       crossorigin="anonymous"
     ></script>
+    <!--Arquivos Js -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/setup.js"></script>
   </body>
 </html>
