--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- Arquivos Owl CSS-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="style/owl/owl.theme.green.min.css" />
+    <!--Responsividade-->
+    <link rel="stylesheet" href="style/responsive.css" />
 
     <title>NETFLIX CLONE</title>
   </head>
